# slopc

./: .gitignore  Cargo.toml  README.md  SECURITY.md  flake.nix  rustfmt.toml
.github/workflows/: release.yml
examples/: Cargo.toml  slop.toml
examples/src/: main.rs
src/: lib.rs
